hotfix: fix bug in update method in UserServiceImpl